After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 656582 - "Input volume" should be hidden if empathy-call isn't enabled
"Input volume" should be hidden if empathy-call isn't enabled
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: VoIP
2.33.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-08-15 13:55 UTC by Guillaume Desmottes
Modified: 2011-08-16 12:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't show call preferences tab when not building empathy-call (969 bytes, patch)
2011-08-15 23:12 UTC, Emilio Pozuelo Monfort
reviewed Details | Review
Don't show empathy-call preferences when not building empathy-call (3.03 KB, patch)
2011-08-16 11:33 UTC, Emilio Pozuelo Monfort
committed Details | Review

Description Guillaume Desmottes 2011-08-15 13:55:43 UTC
There is no much point displaying it if this setting won't be used when user will make calls.
We should hide "Input level" as well.
Comment 1 Emilio Pozuelo Monfort 2011-08-15 22:40:10 UTC
We should hide the whole "Calls" tab if empathy-call isn't built. It only works with empathy-call.
Comment 2 Emilio Pozuelo Monfort 2011-08-15 23:12:41 UTC
Created attachment 193900 [details] [review]
Don't show call preferences tab when not building empathy-call
Comment 3 Guillaume Desmottes 2011-08-16 07:43:21 UTC
Review of attachment 193900 [details] [review]:

Echo cancellation will be used by empathy-av as well (it's done in empathy-audio-{src,sink}) so we should always display this option.
Comment 4 Emilio Pozuelo Monfort 2011-08-16 10:21:08 UTC
Oh I hadn't noticed echo-cancellation is merged
Comment 5 Emilio Pozuelo Monfort 2011-08-16 11:33:57 UTC
Created attachment 193931 [details] [review]
Don't show empathy-call preferences when not building empathy-call
Comment 6 Guillaume Desmottes 2011-08-16 11:53:22 UTC
Review of attachment 193931 [details] [review]:

++
Comment 7 Emilio Pozuelo Monfort 2011-08-16 12:05:39 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.