Don't show empathy-call preferences when not building empathy-call

https://bugzilla.gnome.org/show_bug.cgi?id=656582